--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "feather-icons": "^4.25.0",
+    "jquery": "^3.4.1",
+    "liquor-tree": "^0.2.70",
+    "npm": "^6.13.4",
+    "popper.js": "^1.16.0",
+    "vue": "^2.6.11",
+    "vue-feather": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
