--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.4.4",
-    "feather-icons": "^4.25.0",
-    "jquery": "^3.4.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "core-js": "^3.6.5",
+    "feather-icons": "^4.28.0",
+    "jquery": "^3.5.1",
     "liquor-tree": "^0.2.70",
-    "npm": "^6.13.4",
-    "popper.js": "^1.16.0",
+    "npm": "^6.14.7",
+    "popper.js": "^1.16.1",
+    "rdflib": "^1.2.3",
     "vue": "^2.6.11",
-    "vue-feather": "^1.0.0"
+    "vue-axios": "^2.1.5",
+    "vue-feather": "^1.0.1",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
