--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,25 @@
 version: "3"
 services:
   trellis:
-    image: trellisldp/trellis-postgresql:latest
+    image: trellisldp/trellis-postgresql:0.16.1
     environment:
-      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://db/trellis
-      QUARKUS_DATASOURCE_USERNAME: trellis
-      QUARKUS_DATASOURCE_PASSWORD: trellis
+      QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://db/trellis"
+      QUARKUS_DATASOURCE_USERNAME: "trellis"
+      QUARKUS_DATASOURCE_PASSWORD: "trellis"
+      MP_JWT_VERIFY_PUBLICKEY_LOCATION: "https://www.trellisldp.org/tests/jwks.json"
+      QUARKUS_PROFILE: "dev"
       TRELLIS_HTTP_WEAK_ETAG: "false"
       TRELLIS_HTTP_MEMENTO_HEADER_DATES: "false"
       TRELLIS_HTTP_PRECONDITION_REQUIRED: "true"
       TRELLIS_JDBC_LDP_TYPE: "true"
+      # QUARKUS_HTTP_CORS: "true"
+      # QUARKUS_HTTP_CORS_ORIGINS: "http://0.0.0.0,http://localhost"
+      # QUARKUS_HTTP_CORS_METHODS: "GET,PUT,POST,DELETE"
+      # QUARKUS_HTTP_CORS_EXPOSED_HEADERS: "*"
+      # QUARKUS_HTTP_CORS_HEADERS: "*"
+      QUARKUS_HTTP_CORS_ACCESS_CONTROL_ALLOW_CREDENTIALS: "true"
+      # QUARKUS_HTTP_CORS_ACCESS_CONTROL_MAX_AGE: "24H"
+      QUARKUS_HTTP_LIMITS_MAX_BODY_SIZE: "10G"
     ports:
       - 80:8080
     depends_on:
