--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-axios": "^2.1.5",
     "vue-feather": "^1.0.1",
     "vue-router": "^3.3.4",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.6",
@@ -30,7 +31,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "worker-loader": "^3.0.5"
   },
   "eslintConfig": {
     "root": true,
