--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jquery": "^3.5.1",
     "liquor-tree": "^0.2.70",
     "npm": "^6.14.7",
+    "path": "^0.12.7",
+    "path-posix": "^1.0.0",
     "popper.js": "^1.16.1",
     "rdflib": "^1.2.3",
     "vue": "^2.6.11",
