--- a/package.json
+++ b/package.json
@@ -1,58 +1,5 @@
 {
-  "name": "drastic-dams",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.0",
-    "core-js": "^3.6.5",
-    "feather-icons": "^4.28.0",
-    "jquery": "^3.5.1",
-    "liquor-tree": "^0.2.70",
-    "npm": "^6.14.7",
-    "path": "^0.12.7",
-    "path-posix": "^1.0.0",
-    "popper.js": "^1.16.1",
-    "rdflib": "^1.2.3",
-    "vue": "^2.6.11",
-    "vue-axios": "^2.1.5",
-    "vue-feather": "^1.0.1",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.5.1",
-    "ws": "^7.4.5",
-    "xlsx": "^0.16.8"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "worker-loader": "^3.0.5"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "dotenv": "^14.3.0"
+  }
 }
