--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drastic-dams",
+  "name": "myapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,32 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "@popperjs/core": "^2.11.2",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
-    "core-js": "^3.20.2",
+    "core-js": "^3.6.5",
     "feather-icons": "^4.28.0",
     "jquery": "^3.6.0",
     "liquor-tree": "^0.2.70",
-    "path": "^0.12.7",
     "path-posix": "^1.0.0",
-    "popper.js": "^1.16.1",
     "rdflib": "^2.2.15",
-    "vue": "^2.6.14",
+    "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
     "vue-feather": "^1.1.1",
     "vue-router": "^3.5.3",
-    "vuex": "^3.6.2",
     "ws": "^8.4.2",
     "xlsx": "^0.17.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint-plugin-vue": "^4.4.0",
-    "vue-template-compiler": "^2.6.14",
-    "worker-loader": "^3.0.8"
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -44,13 +42,14 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
-    }
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not dead"
   ]
 }
