--- a/app/package.json
+++ b/app/package.json
@@ -8,19 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@elastic/react-search-ui": "^1.9.0",
+    "@elastic/react-search-ui-views": "^1.9.0",
+    "@elastic/search-ui-app-search-connector": "^1.9.0",
+    "@elastic/search-ui-elasticsearch-connector": "^1.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@popperjs/core": "^2.11.2",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
-    "core-js": "^3.6.5",
-    "feather-icons": "^4.28.0",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.21.1",
     "jquery": "^3.6.0",
     "liquor-tree": "^0.2.70",
     "path-posix": "^1.0.0",
     "rdflib": "^2.2.15",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
-    "vue-feather": "^1.1.1",
     "vue-router": "^3.5.3",
+    "vuejs-paginate": "^2.1.0",
     "ws": "^8.4.2",
     "xlsx": "^0.17.5"
   },
